--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.output.ansi.enabled=always
+
+#ModularBatchConfiguration , SimpleBatchConfiguration
+# ? ? ??? ??..??? ????? ????
+# ?? ?? ???? ?? ???????
+spring.main.allow-bean-definition-overriding=true
